[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Blow/BlowTrigger.gd" type="Script" id=1]

[sub_resource type="AudioStreamMicrophone" id=1]

[node name="Trigger_scene" type="Node2D"]
position = Vector2( 397.299, 154.682 )
script = ExtResource( 1 )

[node name="TimeOfInteraction" type="Timer" parent="."]
wait_time = 5.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
autoplay = true
bus = "Blow_bus"

[node name="lTimeOfIteraction" type="Label" parent="."]
margin_left = 11.3784
margin_top = 44.0813
margin_right = 95.3784
margin_bottom = 65.0813
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lMicVolume" type="Label" parent="."]
margin_left = 111.622
margin_top = 42.5137
margin_right = 181.622
margin_bottom = 65.5137
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lDb" type="Label" parent="."]
margin_left = 184.327
margin_top = 47.5683
margin_right = 224.327
margin_bottom = 61.5683
rect_pivot_offset = Vector2( 20, 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "db"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lSeconds" type="Label" parent="."]
margin_left = 86.2175
margin_top = 47.5683
margin_right = 126.218
margin_bottom = 61.5683
rect_pivot_offset = Vector2( 20, 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "sec"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lLevelPassed" type="Label" parent="."]
margin_left = 132.595
margin_top = 200.486
margin_right = 207.595
margin_bottom = 225.486
rect_pivot_offset = Vector2( 33.327, 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lProgress" type="Label" parent="."]
margin_left = 130.513
margin_top = 172.189
margin_right = 206.513
margin_bottom = 197.189
rect_pivot_offset = Vector2( 33.327, 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Progress:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waiting_time" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="timeout" from="TimeOfInteraction" to="." method="_on_TimeOfInteraction_timeout"]
